// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prioritizes loading complete over currently loading 1`] = `
<div>
  <View
    as="div"
    borderColor="primary"
    display="auto"
    focusColor="info"
    focusPosition="offset"
    overflowX="visible"
    overflowY="visible"
    overscrollBehavior="auto"
    padding="small"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
    withVisualDebug={false}
  >
    <View
      borderColor="primary"
      display="block"
      focusColor="info"
      focusPosition="offset"
      margin="small"
      overflowX="visible"
      overflowY="visible"
      overscrollBehavior="auto"
      position="static"
      shouldAnimateFocus={true}
      withVisualDebug={false}
    >
      <TV
        aria-hidden="true"
        role="img"
      />
    </View>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      wrap="normal"
    >
      Beginning of Your To-Do History
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      size="medium"
      wrap="normal"
    >
      You've scrolled back to your very first To-Do!
    </Text>
  </View>
</div>
`;

exports[`renders TV when all past items loaded 1`] = `
<div>
  <View
    as="div"
    borderColor="primary"
    display="auto"
    focusColor="info"
    focusPosition="offset"
    overflowX="visible"
    overflowY="visible"
    overscrollBehavior="auto"
    padding="small"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
    withVisualDebug={false}
  >
    <View
      borderColor="primary"
      display="block"
      focusColor="info"
      focusPosition="offset"
      margin="small"
      overflowX="visible"
      overflowY="visible"
      overscrollBehavior="auto"
      position="static"
      shouldAnimateFocus={true}
      withVisualDebug={false}
    >
      <TV
        aria-hidden="true"
        role="img"
      />
    </View>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      wrap="normal"
    >
      Beginning of Your To-Do History
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      size="medium"
      wrap="normal"
    >
      You've scrolled back to your very first To-Do!
    </Text>
  </View>
</div>
`;

exports[`renders spinner while loading 1`] = `
<div>
  <View
    as="div"
    borderColor="primary"
    display="auto"
    focusColor="info"
    focusPosition="offset"
    overflowX="visible"
    overflowY="visible"
    overscrollBehavior="auto"
    padding="medium small small small"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
    withVisualDebug={false}
  >
    <Spinner
      as="div"
      margin="0 x-small 0 0"
      renderTitle={[Function]}
      size="small"
      variant="default"
    />
    <Text
      as="span"
      color="secondary"
      letterSpacing="normal"
      size="small"
      wrap="normal"
    >
      Loading past items
    </Text>
  </View>
</div>
`;

exports[`renders very little 1`] = `<div />`;

exports[`shows an Alert when there's a query error 1`] = `
<div>
  <div
    style={
      {
        "margin": "0 auto",
        "width": "50%",
      }
    }
  >
    <ErrorAlert
      error="uh oh"
    >
      Error loading past items
    </ErrorAlert>
  </div>
</div>
`;
